--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,5 @@
 @media (max-width: 1230px) {
+    
     .nav_list {
         display: none;
     }
@@ -38,8 +39,12 @@
         height: 630px;
     }
     header {
-        height: 102vh;
+        height: 80vh;
         width: 130vw;
+    }
+    .rightSection p {
+        width: 315px;
+        height: 84px;
     }
     section {
         display: flex;
@@ -50,6 +55,10 @@
     .blocks {
         flex-direction: row;
         margin-top: 100px;
+        height: 228px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .fashion-store img,
     .reebok img,
@@ -59,9 +68,14 @@
     }
     .background {
         height: 1150px;
+        width: 130vw;
     }
     .portfolio h1{
         margin-top: 20px;
         margin-bottom: 10px;
+    }
+    .leftSection img {
+        width: 296px;
+        height: 367px;
     }
 }
